# pgbouncer-operator

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  config.yaml  example-pgbouncer.ini  index.html  juju-crashdump-9017eeea-2294-4a8a-bc52-0b82a716d373.tar.xz  juju-crashdump-d3c7bffb-9d59-43e3-bbff-8c044abe2dbc.tar.xz  juju-crashdump-ee9c7648-ea6c-4e71-bcc2-e3605250136c.tar.xz  metadata.yaml  pyproject.toml  renovate.json  requirements.txt  spread.yaml  tox.ini  tox_uv.toml
.github/: .jira_sync_config.yaml  pull_request_template.md  renovate.json5
1488/: index.html
1489/: index.html
1504/: index.html
1519/: index.html
1524/: index.html
1559/: index.html
1560/: index.html
1561/: index.html
1571/: index.html
1578/: index.html
1592/: index.html
1593/: index.html
1598/: index.html
1599/: index.html
1600/: index.html
1616/: index.html
1620/: index.html
1623/: index.html
1624/: index.html
1626/: index.html
1634/: index.html
1638/: index.html
1639/: index.html
1640/: index.html
1643/: index.html
1647/: index.html
1649/: index.html
1652/: index.html
1654/: index.html
1676/: index.html
1679/: index.html
1692/: index.html
1708/: index.html
1740/: index.html
1749/: index.html
1758/: index.html
1764/: index.html
1766/: index.html
1774/: index.html
1786/: index.html
1794/: index.html
1802/: index.html
1803/: index.html
1809/: index.html
1818/: index.html
1826/: index.html
1827/: index.html
1831/: index.html
1846/: index.html
1858/: index.html
1874/: index.html
1884/: index.html
1895/: index.html
1901/: index.html
1906/: index.html
1911/: index.html
1934/: index.html
1937/: index.html
1940/: index.html
1954/: index.html
1959/: index.html
1960/: index.html
1961/: index.html
1976/: index.html
1979/: index.html
1997/: index.html
2000/: index.html
2003/: index.html
2009/: index.html
2011/: index.html
2018/: index.html
2026/: index.html
2034/: index.html
2036/: index.html
2040/: index.html
2046/: index.html
2052/: index.html
2054/: index.html
2055/: index.html
2057/: index.html
2059/: index.html
2065/: index.html
2072/: index.html
2076/: index.html
2078/: index.html
2080/: index.html
2084/: index.html
2088/: index.html
2090/: index.html
2091/: index.html
2092/: index.html
2093/: index.html
2098/: index.html
2109/: index.html
2110/: index.html
2122/: index.html
2125/: index.html
2126/: index.html
2131/: index.html
2132/: index.html
2133/: index.html
2136/: index.html
2144/: index.html
2145/: index.html
2148/: index.html
2149/: index.html
2154/: index.html
2156/: index.html
2157/: index.html
2159/: index.html
2164/: index.html
2176/: index.html
2183/: index.html
2191/: index.html
2192/: index.html
2195/: index.html
2196/: index.html
2199/: index.html
2205/: index.html
2209/: index.html
2210/: index.html
2211/: index.html
2213/: index.html
2216/: index.html
2224/: index.html
2228/: index.html
2238/: index.html
2241/: index.html
2252/: index.html
2258/: index.html
2260/: index.html
2263/: index.html
2265/: index.html
2266/: index.html
2267/: index.html
2268/: index.html
2270/: index.html
2271/: index.html
2296/: index.html
2327/: index.html
2335/: index.html
2336/: index.html
2344/: index.html
2364/: index.html
2369/: index.html
2370/: index.html
2375/: index.html
2382/: index.html
2393/: index.html
2394/: index.html
2403/: index.html
2407/: index.html
2412/: index.html
2413/: index.html
2434/: index.html
2452/: index.html
2462/: index.html
2466/: index.html
2467/: index.html
2469/: index.html
2470/: index.html
2484/: index.html
2492/: index.html
2493/: index.html
2498/: index.html
2499/: index.html
2502/: index.html
2522/: index.html
2525/: index.html
2530/: index.html
2534/: index.html
2535/: index.html
2536/: index.html
2537/: index.html
2538/: index.html
2544/: index.html
2545/: index.html
2546/: index.html
2547/: index.html
2548/: index.html
2556/: index.html
2565/: index.html
2585/: index.html
2586/: index.html
2588/: index.html
2599/: index.html
2603/: index.html
2609/: index.html
2612/: index.html
2615/: index.html
2656/: index.html
2668/: index.html
2672/: index.html
2695/: index.html
2697/: index.html
2702/: index.html
2704/: index.html
2707/: index.html
2710/: index.html
2714/: index.html
2726/: index.html
2730/: index.html
2738/: index.html
2745/: index.html
2747/: index.html
2757/: index.html
2848/: index.html
2851/: index.html
2852/: index.html
2853/: index.html
2856/: index.html
2857/: index.html
2858/: index.html
2866/: index.html
2868/: index.html
2871/: index.html
2880/: index.html
2881/: index.html
2882/: index.html
2887/: index.html
2893/: index.html
2896/: index.html
2897/: index.html
2902/: index.html
2903/: index.html
2904/: index.html
2907/: index.html
2909/: index.html
2916/: index.html
2918/: index.html
2922/: index.html
2925/: index.html
2927/: index.html
2928/: index.html
2932/: index.html
2934/: index.html
2935/: index.html
2938/: index.html
2947/: index.html
2949/: index.html
2955/: index.html
2960/: index.html
2962/: index.html
2963/: index.html
2965/: index.html
2972/: index.html
2974/: index.html
2976/: index.html
2986/: index.html
3022/: index.html
3024/: index.html
3025/: index.html
3026/: index.html
3030/: index.html
3035/: index.html
3039/: index.html
3041/: index.html
3042/: index.html
3043/: index.html
3049/: index.html
3055/: index.html
3062/: index.html
3064/: index.html
3066/: index.html
3068/: index.html
3069/: index.html
3070/: index.html
3071/: index.html
3077/: index.html
3082/: index.html
3084/: index.html
3087/: index.html
docs/: explanation.md  how-to.md  index.md  overview.md  (+2 more)
(+99980 files in other folders)
