# Copyright 2022 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "pgbouncer-operator"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
[dependency-groups]
charm = [
    "jinja2==3.1.6",
    "ops==2.20.0",
    "tenacity==9.0.0",
    "pydantic==1.10.22",
    "psycopg2==2.9.10",
    "psycopg[c]==3.2.6"
]

libs = [
    # data_platform_libs/v0/data_interfaces.py
    "ops>=2.0.0",
    # data_platform_libs/v0/upgrade.py
    "poetry-core",
    # data_platform_libs/v0/upgrade.py requires pydantic ^1.10
    # grafana_agent/v0/cos_agent.py requires pydantic
    "pydantic<2",
    # grafana_agent/v0/cos_agent.py
    "cosl",
    # tls_certificates_interface/v2/tls_certificates.py
    "cryptography; python_version > '3.8'",
    # Focal cannot build 45
    "cryptography < 45; python_version < '3.10'",
    "jsonschema",
    # tempo_coordinator_k8s/v0/charm_tracing.py
    "opentelemetry-exporter-otlp-proto-http==1.21.0"
]

format = [
    "ruff==0.11.7"
]

lint = [
    "codespell==2.4.1"
]

unit = [
    "coverage[toml]==7.6.1",
    "pytest==8.3.5",
    "parameterized==0.9.0"
]

integration = [
    "pytest",
    "pytest-operator==0.42.0",
    'juju==3.6.1.1; python_version > "3.10"',
    "tenacity",
    "mailmanclient==3.3.5",
    "psycopg2-binary==2.9.10",
    "landscape-api-py3==0.9.0",
    "allure-pytest==2.14.0",
    "allure-pytest-default-results==0.1.2"
]

[tool.uv]
no-binary = true
build-constraint-dependencies = [
    "setuptools_scm < 8.3.0; python_version < '3.10'",
    "maturin < 1.8.4; python_version <= '3.8'",
    "setuptools-rust < 1.11; python_version <= '3.8'"
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "logger\\.debug"
]

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
markers = ["juju2", "juju3", "juju_secrets"]

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

# Linting tools configuration
[tool.ruff]
# preview and explicit preview are enabled for CPY001
preview = true
target-version = "py38"
src = ["src", "."]
line-length = 99

[tool.ruff.lint]
explicit-preview-rules = true
select = ["A", "E", "W", "F", "C", "N", "D", "I001", "B", "CPY001", "RUF", "S", "SIM", "UP", "TCH"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
# Ignore E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["E501", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100", "D101", "D102", "D103", "D104",
    # Asserts
    "B011",
    # Disable security checks for tests
    "S",
]

[tool.ruff.lint.flake8-copyright]
# Check for properly formatted copyright header in each file
author = "Canonical Ltd."
notice-rgx = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+"
min-file-size = 1

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"
